// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly renders/does not render the add task follower button 1`] = `
<div
  className={undefined}
>
  <div
    className="undefined"
  />
  <div
    className="undefined"
    onClick={[Function]}
  />
</div>
`;

exports[`renders care team 1`] = `
Array [
  <div
    className={undefined}
    onClick={[Function]}
>
    <div
        className={undefined}
        style={
            Object {
                "backgroundImage": "url('http://bit.ly/2u9bJDA')",
              }
        }
    />
    <div
        className={undefined}
    >
        <div
            className={undefined}
        >
            first last
        </div>
        <div
            className={undefined}
        >
            physician
        </div>
    </div>
    <div
        className=""
    />
</div>,
  <div
    className={undefined}
    onClick={[Function]}
>
    <div
        className={undefined}
        style={
            Object {
                "backgroundImage": "url('http://bit.ly/2u9bJDA')",
              }
        }
    />
    <div
        className={undefined}
    >
        <div
            className={undefined}
        >
            first last
        </div>
        <div
            className={undefined}
        >
            physician
        </div>
    </div>
    <div
        className=""
    />
</div>,
]
`;
